# AoC

./: .gitignore
2022/: .pre-commit-config.yaml  Cargo.toml  README.rst
2022/input/: 2-sample
2022/src/: lib.rs
2023/AoC2023dotNet/: AoC2023dotNet.sln
2023/AoC2023dotNet/day1/: Program.cs
2023/AoC2023dotNet/day10/: Program.cs
2023/AoC2023dotNet/day11/: Program.cs
2023/AoC2023dotNet/day2/: Program.cs
2023/AoC2023dotNet/day3/: Program.cs
2023/AoC2023dotNet/day4/: Program.cs
2023/AoC2023dotNet/day5/: Program.cs
2023/AoC2023dotNet/day6/: Program.cs
2023/AoC2023dotNet/day7/: Program.cs
2023/AoC2023dotNet/day8/: Program.cs
2023/AoC2023dotNet/day9/: Program.cs
2023/py/: 1.py
2024/ocaml/: dune-project  ocaml.opam
2024/ocaml/lib/: common.ml
