(lang dune 3.15)

(name ocaml)

(generate_opam_files true)

(source
 (github funkyHat/AoC))

(authors "Matt Wheeler")

(maintainers "Matt Wheeler")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
